static/less/modals.less
@import "/static/less/variables.less";
@import "/static/less/mixins.less";

//
// Modals
// --------------------------------------------------

// Background
.modal-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: @zindexModalBackdrop;
  background-color: @modalOverlayColor;
  // Fade for backdrop
  &.fade {
    opacity: 0;
  }
}

.modal-backdrop,
.modal-backdrop.fade.in {
  .opacity(85);
}

// Base modal
.modal {
  position: fixed;
  top: 10%;
  left: 50%;
  z-index: @zindexModal;
  width: @modalWidth;
  margin-left: -@modalWidth / 2;
  &.wide-modal {
    width: @wideModalWidth;
    margin-left: -@wideModalWidth / 2;
  }
  background-color: @modalBackgroundColor;
  border: @modalBorderWidth solid;
  border: @modalBorderWidth solid;
  *border: @modalBorderWidth solid;
  border-color: @modalBorderColor;
  .background-clip(padding-box);
  // Remove focus outline from opened modal
  outline: none;
  &.fade {
    .transition(e('opacity .3s linear, top .3s ease-out'));
    top: -25%;
  }
  &.fade.in {
    top: 10%;
  }
}

.modal-header {
  padding: 5px 15px;
  border-bottom: 1px transparent;
  background-color: @modalBorderColor;
  // Close icon
  .close {
    right: -5px;
    top: -5px;
  }
  // Heading
  h2 {
    color: #fff;
    padding-left: 25px;
    margin-top: 5px;
  }
}

// Body (where all modal content resides)
.modal-body {
  position: relative;
  overflow-y: auto;
  max-height: 420px;
  margin: 0;

  &.modal-info {
    padding-bottom: 0px !important;
  }

  .row-pad {
    padding: 20px;

    p:last-of-type {
      margin: 0px;
    }
  }

  .row-full {
    margin-left: -35px;
    margin-right: -35px;
    padding-left: 35px;
    padding-right: 35px;
    //min-height: 55px;
  }

  .row-borders {
    border-top: 1px solid @gray4;
    border-bottom: 1px solid @gray4;
  }

  .number1a {
    line-height: 48px;
  }

  &:not(.modal-with-headers) {
    background-color: @modalBodyBackgroundColor;
    padding: 20px 35px 20px 35px;
  }

  .modal-content {
    background-color: @modalBodyBackgroundColor;
    padding: 20px 35px 20px 35px;
  }

  .optional-modal-fields:not(.open) {
    display: none;
  }
}

.modal-section-header {
  background-color: @modalInformationalLightBackground;
  border-top: 1px solid @balancedLightGray;
  border-bottom: 1px solid @balancedLightGray;
}

.modal-informational {
  background-color: @modalInformationalDarkBackground;
  border-top: 1px solid @balancedLightGray;
  border-bottom: 1px solid @balancedLightGray;

  .disclosure-button {
    background-color: @modalInformationalDarkBackground;
    float: left;
    a {
      .cssicon(
        @url: @iconsFile,
        @width: 20px,
        @height: 58px,
        @display: block
      );
      background-position: -15px -828px;

      &:hover {
        background-color: @black;
      }
    }
    &.open {
      a {
        background-position: -115px -828px;
      }
    }
  }

  p {
    padding: 20px 0 20px 0;
    text-align: center;
    color: @balancedBlack;
    margin: 0;

    &.modal-informational-content {
      padding: 20px 35px 20px 35px;
    }
  }

  img {
    &.modal-informational-content {
      padding: 0px 35px 0px 35px;
    }
  }

  .modal-informational-content {
    &.fields-header {
      text-align: left;
    }

    &.modal-informational-split-content {
      padding: 20px 35px 20px 35px;

      .informational-label {
        float: left;
        width: 160px;
        padding-top: 5px;
        text-align: left;
      }

      .informational-content {
        padding: 0 0 0 20px;
        margin-left: 180px;
        border-left: 2px solid;
        border-color: @gray2;
      }
    }
  }
}

.modal-informational-light {
  p {
    color: @black;
  }

  background-color: @modalInformationalDarkBackground;
}

// Remove bottom margin if need be
.modal-form {
  margin-bottom: 0;
}

// Footer (for actions)
.modal-footer {
  padding: 15px;
  margin-bottom: 0;
  text-align: right; // right align buttons
  background-color: @modalBackgroundColor;
  border-top: 1px transparent;
  .clearfix(); // clear it in case folks use .pull-* classes on buttons

  // Properly space out buttons
  .button + .btn {
    margin-left: 5px;
    margin-bottom: 0; // account for input[type="submit"] which gets the bottom margin like all other inputs
  }
  .button[rel="primary"] {
    float: right;
    margin-left: 5px;
  }
  // but override that for button groups
  .btn-group .btn + .btn {
    margin-left: -1px;
  }
  // and override it for block buttons as well
  .btn-block + .btn-block {
    margin-left: 0;
  }
}

.modal {
  .summary-info {
    margin-bottom: 1em;
    label {
      display: inline-block;
      margin-bottom: 5px;
    }
    input {
    }
  }
}

#pay-seller {
  top: 5%;
  left: 45%;
}

.control-group {

  &:first-of-type {
    margin: 0;
  }

  &:last-of-type {
    margin-bottom: 0;
  }

  margin: 10px 0 10px 0;
}

#verify-bank-account {
  .row-pad {
    p.label1a {
      margin-bottom: 20px;
    }
  }

  .row-full {
    min-height: 50px;
  }
}

#confirm-verification {
  .row-pad {
    p.label1a {
      margin-bottom: 20px;
    }
  }

  #verification-attempts {
    background-color: @gray2;

    .label1a {
      margin-bottom: 0px;
    }
  }
}

